# dev-sandbox

./: .env.example  .gitignore  .gitmodules  .mcpregistry_github_token  .mcpregistry_registry_token  APOLLO_MCP_EXECUTION_SUMMARY.md  AUDIT-FITNESS-COACHING-ASSETS.md  AUTOMATION_STATUS.md  CLAUDE.md  CLEANUP-TASKS-SUMMARY.md  CLINE-HANDOFF-FITNESS-COACHING.md  COMPANY-ASSET-DISTRIBUTION-ANALYSIS.md  CREATOMATE_API_SETUP.md  CREATOMATE_VS_HYBRID_COMPARISON.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PIPELINE.md  DOCKET.md  FINAL-OPTIMIZATION-SUMMARY.md  FITNESS_INFLUENCER_GUIDE.md  FITNESS_INFLUENCER_QUICK_START.md  FOLDER-ANALYSIS-REPORT.md  FOLDER-RESTRUCTURE-COMPLETE.md  FOLDER-STRUCTURE-APPENDIX.md  FOLDER-STRUCTURE.md  GOOGLE-ANALYTICS-SETUP.md  HANDOFF.md  HOME-DIRECTORY-REORGANIZATION-COMPLETE.md  HYBRID_VIDEO_IMPLEMENTATION_SUMMARY.md  HYBRID_VIDEO_SETUP_GUIDE.md  HYBRID_VIDEO_SYSTEM_READY.md  IMPLEMENTATION_SUMMARY.md  KANBAN.md  MIGRATION-EXECUTION-SUMMARY.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PRODUCT-IDEAS-REVIEW.md  PROJECT_INDEX.md  RALPH_INTEGRATION_COMPLETE.md  README.md  REORGANIZATION-COMPLETE.md  SOCIAL_MEDIA_CORRECTION.md  (+35 more)
.claude/: AMAZON_ASSISTANT_AUDIT.md  AMAZON_AUTH_SETUP.md  AMAZON_AUTH_WORKAROUND.md  FITNESS_INFLUENCER_DEPLOYMENT_PLAN.md  FITNESS_INFLUENCER_TECH_EVALUATION.md  KNOWLEDGE_BASE.md  MARCEAUSOLUTIONS_INTEGRATION.md  PROJECT_DEVELOPMENT_PIPELINE.md  QUICK_REFERENCE.md  README.md  REPLIT_INTEGRATION_GUIDE.md  SESSION_LOG.md  SETTINGS-NOTES.md  USAGE_GUIDE.md  settings.local.json
.demo-structure-template/: README.md  company-readme-template.md
clawdbot-outputs/: ralph-test.txt  test-sync.txt
config/: COACHING_TRACKER_SHEET_ID.txt  pipeline_sheet_id.txt  service_catalog.json
data/: agent_dialogues.jsonl  calendar_backup_20260430_125642.json  live-urls.json  routing_learning.json  routing_rules.json
directives/: ai-customer-service.md  ai-systems.md  amazon-seller.md  amazon_seller_operations.md  convert_markdown_to_pdf.md  email_analyzer.md  example_directive.md  fitness-influencer.md  fitness_influencer_operations.md  interview_prep.md  lead-generation.md  marceau-solutions-digital.md  mcp-services.md  md_to_pdf.md  onboard_client.md  personal-assistant.md  sales_crm.md  uber_lyft_comparison.md  website-tool-integration.md
docs/: # Grok Response 1.md  3-PHASE-HVAC-PLAN-JAN-19-2026.md  ACTION-ITEMS-JAN-20-2026.md  AGENT-ARCHITECTURE-UPGRADES.md  AGENT-CREATION-GUIDE.md  AGENT-ORCHESTRATOR-GUIDE.md  AI-ROUTING-OPTIMIZATION.md  AMAZON-SETUP.md  AMAZON_QUICK_START.md  APOLLO-IO-MAXIMIZATION-PLAN.md  ARCHITECTURE-DECISIONS.md  ASSET-ORGANIZATION.md  BILLING-ALERTS-SUMMARY.md  BUSINESS-INTEGRATION-PROTOCOL.md  BUSINESS-SETUP-STATUS.md  BUSINESS-TOOLS-OPTIMIZATION-ROADMAP.md  CLAUDE-CODE-BRIDGE.md  CLAWDBOT-CAPABILITIES.md  CLAWDBOT-IMPLEMENTATION-SUMMARY.md  CLAWDBOT-MONITORING-SYSTEM.md  CLAWDBOT-OPS-MANUAL.md  CLAWDBOT-PA-INTEGRATION.md  CLAWDBOT-TEST-PLAN.md  COLD-OUTREACH-STRATEGY-JAN-19-2026.md  COMPANY-LIFECYCLE-MANAGEMENT.md  COMPANY-ON-COMPUTER-ROADMAP.md  COMPREHENSIVE-CONFLICT-AUDIT.md  COST-TRACKING.md  CUSTOMER-ACQUISITION-STRATEGY-JAN-19-2026.md  DEPLOYMENT-QUICK-REFERENCE.md  EC2-N8N-SETUP.md  EC2-SCALABILITY-BENEFITS.md  EC2-SERVER-INFO.md  EC2-VS-MAC-MINI-ANALYSIS.md  EXECUTION-PLAN-WEEK-JAN-19-2026.md  FITNESS-INFLUENCER-AI-OPTIMIZATION.md  FOLDER-STRUCTURE-GUIDE.md  FULL-SYSTEM-AUDIT-2026-03-25.md  GO-LIVE-APRIL-6.md  GOOGLE-CLOUD-ACTION-PLAN.md  (+125 more)
email-analyzer/: .gitignore  CHANGELOG.md  DEPLOYMENT-SUMMARY.md  QUICK-START.md  README.md  SKILL.md
execution/: CLAUDE.md  MEM0_DEPLOYMENT.md  MEM0_DEPLOYMENT_CHECKLIST.md  MEM0_FILES_INDEX.txt  MEM0_QUICK_REFERENCE.md  MEM0_SUMMARY.md  README.md  accountability_handler.py  add_lead.py  agent_bridge_api.py  agent_calendar_gateway.py  agent_comms.py  agent_triggers.py  amazon_inventory_optimizer.py  amazon_sp_api.py  apply_navy_theme.py  (+105 more)
projects/apollo-mcp/: .dockerignore  IMPLEMENTATION_PROGRESS.md  PHASE_1_2_3_COMPLETE.md  PHASE_1_STATUS.md  PROJECT-SUMMARY.md  README.md  TESTING.md  pyproject.toml  server.json  test_installation.py  verify_v1.1.0.py
projects/apollo-mcp/src/apollo_mcp/: __init__.py  server.py
projects/apollo-mcp/templates/: southwest_florida_comfort.json
projects/marceau-solutions/amazon-seller/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  server.json
projects/marceau-solutions/amazon-seller/BJKPaperTrail/: Refund Request Submission.eml
projects/marceau-solutions/amazon-seller/src/amazon_seller_mcp/: __init__.py  amazon_fee_calculator.py  server.py
projects/marceau-solutions/fitness/tools/trainerize-mcp/: pyproject.toml
projects/marceau-solutions/fitness/tools/trainerize-mcp/src/trainerize_mcp/: server.py
projects/mcp-services/src/canva-mcp/: CLAUDE.md  pyproject.toml  server.json
projects/mcp-services/src/canva-mcp/src/canva_mcp/: __init__.py  auth.py
projects/mcp-services/src/ticket-aggregator-mcp/: README.md  pyproject.toml  server.json
projects/mcp-services/src/ticket-aggregator-mcp/market-analysis/agent1-market-size/: FINDINGS.md
projects/mcp-services/src/ticket-aggregator-mcp/market-analysis/agent3-legal-customer/: FINDINGS.md
projects/mcp-services/src/ticket-aggregator-mcp/market-analysis/consolidated/: GO-NO-GO-DECISION.md  VIABILITY-SCORECARD.md
projects/mcp-services/src/ticket-aggregator-mcp/src/ticket_discovery_mcp/: server.py
projects/shared/md-to-pdf/: CHANGELOG.md  CLAUDE.md  glama.json  pyproject.toml
projects/shared/md-to-pdf/mcp-server/: md_to_pdf_mcp.py
projects/shared/md-to-pdf/registry/: manifest.json
projects/shared/md-to-pdf/src/md_to_pdf_mcp/: __init__.py
projects/shared/md-to-pdf/testing/: TEST-PLAN.md
projects/shared/twilio-mcp/: CLAUDE.md  pyproject.toml
projects/shared/twilio-mcp/src/twilio_mcp/: server.py
projects/shared/upwork-mcp/: RATE-CALCULATOR.md  README.md  UPWORK-SUCCESS-GUIDE.md  pyproject.toml  server.json
projects/shared/upwork-mcp/edited/: create_jumpcuts.py  silence_detect.txt
projects/shared/upwork-mcp/src/upwork_mcp/: __init__.py  server.py
(+2874 files in other folders)
