[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apollo-mcp"
version = "1.0.0"
description = "Apollo.io lead enrichment and prospecting via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "William Marceau Jr.", email = "william@marceausolutions.com" }
]
keywords = ["mcp", "apollo", "leads", "prospecting", "sales", "crm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/MarceauSolutions/dev-sandbox/tree/main/projects/apollo-mcp"
Repository = "https://github.com/MarceauSolutions/dev-sandbox"

[project.scripts]
apollo-mcp = "apollo_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apollo_mcp"]
