[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-seller-mcp"
version = "1.0.0"
description = "Amazon seller tools: FBA fees, inventory optimization, restock recommendations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "William Marceau Jr.", email = "william@marceausolutions.com" }
]
keywords = ["mcp", "amazon", "seller", "fba", "inventory", "ecommerce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-amazon-sp-api>=1.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/MarceauSolutions/dev-sandbox/tree/main/projects/amazon-seller"
Repository = "https://github.com/MarceauSolutions/dev-sandbox"

[project.scripts]
amazon-seller-mcp = "amazon_seller_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amazon_seller_mcp"]
