[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-to-pdf-mcp"
version = "1.0.1"
description = "Convert markdown to professional PDFs with clickable table of contents. No API keys."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "William Marceau Jr.", email = "william@marceausolutions.com" }
]
keywords = ["mcp", "markdown", "pdf", "converter", "document", "toc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "markdown2>=2.4.0",
    "weasyprint>=60.0",
    "pygments>=2.15.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/MarceauSolutions/dev-sandbox/tree/main/projects/md-to-pdf"
Repository = "https://github.com/MarceauSolutions/dev-sandbox"

[project.scripts]
md-to-pdf-mcp = "md_to_pdf_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/md_to_pdf_mcp"]
