[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twilio-mcp"
version = "1.0.0"
description = "Twilio SMS tools for Claude - check inbox, send messages, track leads"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Marceau Solutions", email = "william@marceausolutions.com"}
]
keywords = ["mcp", "claude", "twilio", "sms", "messaging", "leads"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "twilio>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wmarceau/twilio-mcp"
Repository = "https://github.com/wmarceau/twilio-mcp"

[project.scripts]
twilio-mcp = "twilio_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/twilio_mcp"]
