[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canva-mcp"
version = "1.0.0"
description = "MCP server for Canva Connect API - design creation, templates, assets, exports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "William Marceau", email = "william@marceausolutions.com"}
]
keywords = ["mcp", "claude", "canva", "design", "graphics", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/wmarceau/canva-mcp"
Repository = "https://github.com/wmarceau/canva-mcp"
Documentation = "https://github.com/wmarceau/canva-mcp#readme"

[project.scripts]
canva-mcp = "canva_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/canva_mcp"]
