[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-discovery-mcp"
version = "1.0.0"
description = "MCP server for AI agents to search and compare concert ticket prices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "William Marceau", email = "william@marceausolutions.com"}
]
keywords = ["mcp", "claude", "ai", "tickets", "concerts", "events", "ticketmaster", "seatgeek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/wmarceau/ticket-discovery-mcp"
Repository = "https://github.com/wmarceau/ticket-discovery-mcp"

[project.scripts]
ticket-discovery-mcp = "ticket_discovery_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_discovery_mcp"]
