[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trainerize-mcp"
version = "1.0.0"
description = "ABC Trainerize personal training tools: client management, workout programs, nutrition coaching, messaging, scheduling, and analytics via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "William Marceau Jr.", email = "william@marceausolutions.com" }
]
keywords = ["mcp", "trainerize", "personal-training", "fitness", "coaching", "nutrition", "workout"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/MarceauSolutions/dev-sandbox/tree/main/projects/trainerize-mcp"
Repository = "https://github.com/MarceauSolutions/dev-sandbox"

[project.scripts]
trainerize-mcp = "trainerize_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trainerize_mcp"]
